# skinJiggle

./: skinJiggle.sln
skinJiggle/: CMakeLists.txt  Main.cpp  cvJiggleCmd.cpp  cvJiggleCmd.h  cvJiggleDeformer.cpp  cvJiggleDeformer.h  skinJiggle.vcxproj  skinJiggle.vcxproj.filters
skinJiggle/x64/Release/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  skinJiggle.lastbuildstate  skinJiggle.write.1.tlog
x64/Release/: skinJiggle.exp  skinJiggle.lib  skinJiggle.mll
